# RagDemo

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml  pyproject.toml  任务描述_民事诉状生成系统.md  法律RAG系统_前端UI设计提示词方案-claude.md
backend/: Dockerfile
backend/app/: main.py
backend/app/api/: auth.py  case.py  chat.py  complaint.py  deps.py  evidence.py  kb.py
backend/app/core/: captcha.py  config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  case.py  chat.py  kb.py  user.py
backend/app/schemas/: auth.py  case.py  chat.py  complaint.py  evidence.py  kb.py
backend/app/services/: complaint_gen.py  complaint_templates.py  docx_export.py  embedding.py  extractor.py  law_recommend.py  llm.py  milvus_store.py  ocr.py  parser.py  prompts.py  reranker.py  retriever.py  storage.py
backend/config/: config.docker.example.yaml  config.example.yaml
backend/tests/: conftest.py  test_auth.py  test_case_api.py  test_chat_api.py  test_complaint_api.py  test_evidence_api.py  test_kb_api.py  test_parser.py  test_retriever.py
data/: 民事诉讼法节选_管辖与证据.md  民法典节选_诉讼时效与违约责任.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: auth.js  case.js  chat.js  complaint.js  evidence.js  index.js  kb.js
frontend/src/components/: AiNotice.vue  AuthShell.vue  PartyForm.vue  (+1 more)
frontend/tests/: ai-notice.test.js  citation.test.js  evidence.test.js  format.test.js  password.test.js
scripts/: start-dev.bat  stop-dev.bat
(+19 files in other folders)
