[project]
name = "ragdemo"
version = "0.1.0"
description = "面向民事纠纷的法律知识库 RAG 系统（诉状生成与咨询）"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # 数据库（异步 SQLAlchemy + MySQL）
    "sqlalchemy[asyncio]>=2.0.30",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    # 配置与日志
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "loguru>=0.7.2",
    # 认证与验证码
    "bcrypt>=4.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pillow>=10.3.0",
    "pymilvus>=2.4.0,<2.5.0",
    "openai>=2.45.0",
    "dashscope>=1.26.3",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "minio>=7.2.20",
    "setuptools<81",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "-v"

[tool.uv]
package = false
